# developer-exercises

./: .gitignore  Cargo.toml  README.md  check_running_in_gym_nix_shell.sh  default.nix  package-lock.json  package.json  run-all-tests-added-to-script.sh  run-all-tests.sh  run-solution-tests.sh
.github/workflows/: build-and-test.yml
0.concepts/4.dht/example/: README.md
0.concepts/5.validation/example/: README.md
1.basic/0.entries/: README.md
1.basic/0.zome-functions/exercise/: README.md
1.basic/0.zome-functions/exercise/tests/: package.json
1.basic/0.zome-functions/exercise/workdir/: dna.yaml
1.basic/0.zome-functions/exercise/zomes/exercise/: Cargo.toml
1.basic/0.zome-functions/exercise/zomes/exercise/src/: lib.rs
1.basic/0.zome-functions/solution/tests/: package-lock.json  package.json
1.basic/0.zome-functions/solution/workdir/: dna.yaml
1.basic/1.entries/exercise/: README.md
1.basic/1.entries/exercise/tests/: package-lock.json  package.json
1.basic/1.entries/exercise/workdir/: dna.yaml
1.basic/1.entries/exercise/zomes/exercise/: Cargo.toml
1.basic/1.entries/exercise/zomes/exercise/src/: lib.rs
1.basic/1.entries/solution/: README.md
1.basic/1.entries/solution/tests/: package-lock.json  package.json
1.basic/1.entries/solution/workdir/: dna.yaml
1.basic/1.hashes/tests/src/: index.ts
1.basic/2.elements/exercise/: README.md
1.basic/2.elements/solution/: run_tests.sh
1.basic/2.hashes/exercise/: README.md
1.basic/2.hashes/exercise/tests/: package.json
1.basic/2.hashes/exercise/workdir/: dna.yaml
1.basic/2.hashes/solution/: README.md
1.basic/2.hashes/solution/tests/: package.json
1.basic/2.hashes/solution/workdir/: dna.yaml
1.basic/2.hashes/solution/zomes/exercise/: Cargo.toml
1.basic/2.hashes/solution/zomes/exercise/src/: lib.rs
1.basic/3.elements/exercise/: README.md
1.basic/3.hashes/solution/: README.md  run_tests.sh
1.basic/3.links/exercise/: README.md  run_build.sh
1.basic/3.links/exercise/tests/: package.json
1.basic/3.links/exercise/workdir/: dna.yaml
1.basic/3.links/extra/: README.md
1.basic/3.links/extra/tests/: package.json
1.basic/3.links/extra/workdir/: dna.yaml
1.basic/3.links/extra/zomes/exercise/: Cargo.toml
1.basic/3.links/extra/zomes/exercise/src/: lib.rs
1.basic/3.links/solution/: README.md
1.basic/3.links/solution/tests/: package-lock.json  package.json
1.basic/3.links/solution/workdir/: dna.yaml
1.basic/3.links/solution/zomes/exercise/: Cargo.toml
1.basic/3.links/solution/zomes/exercise/src/: lib.rs
1.basic/4.anchors/exercise/: README.md
1.basic/4.elements/: run_tests.sh
1.basic/4.source-chain/exercise/tests/: package.json
1.basic/4.source-chain/exercise/workdir/: dna.yaml
1.basic/4.source-chain/exercise/zomes/exercise/: Cargo.toml
1.basic/4.source-chain/exercise/zomes/exercise/src/: lib.rs
1.basic/4.source-chain/solution/tests/: package-lock.json  package.json
1.basic/4.source-chain/solution/workdir/: dna.yaml
1.basic/5.elements/exercise/: README.md
1.basic/5.elements/exercise/tests/: package.json
1.basic/5.elements/exercise/workdir/: dna.yaml
1.basic/5.elements/solution/: README.md
1.basic/5.elements/solution/tests/: package.json
1.basic/5.elements/solution/workdir/: dna.yaml
1.basic/5.elements/solution/zomes/exercise/: Cargo.toml
1.basic/5.elements/solution/zomes/exercise/src/: lib.rs
1.basic/6.validation/exercise/tests/: package.json
1.basic/6.validation/exercise/workdir/: dna.yaml
1.basic/6.validation/exercise/zomes/exercise/: Cargo.toml
1.basic/6.validation/exercise/zomes/exercise/src/: lib.rs
1.basic/6.validation/solution/: README.md
1.basic/6.validation/solution/tests/: package-lock.json  package.json
1.basic/6.validation/solution/workdir/: dna.yaml
1.basic/solutions/4.elements/: Cargo.toml  run_build.sh
2.intermediate/0.anchors/exercise/: README.md
2.intermediate/0.anchors/exercise/tests/: package-lock.json  package.json
2.intermediate/0.anchors/exercise/workdir/: dna.yaml
2.intermediate/0.anchors/exercise/zomes/exercise/: Cargo.toml
2.intermediate/0.anchors/exercise/zomes/exercise/src/: lib.rs
2.intermediate/0.anchors/solution/: README.md
2.intermediate/0.anchors/solution/tests/: package-lock.json  package.json
2.intermediate/0.anchors/solution/workdir/: dna.yaml
2.intermediate/0.anchors/solution/zomes/exercise/: Cargo.toml
2.intermediate/0.anchors/solution/zomes/exercise/src/: lib.rs
2.intermediate/1.paths/exercise/: README.md
2.intermediate/1.paths/exercise/tests/: package.json
2.intermediate/1.paths/exercise/workdir/: dna.yaml
2.intermediate/1.paths/solution/: README.md
2.intermediate/1.paths/solution/tests/: package.json
2.intermediate/1.paths/solution/workdir/: dna.yaml
2.intermediate/2.remote-call/: README.md  run_build.sh
2.intermediate/3.capability-tokens/: README.md
2.intermediate/3.capability-tokens/tests/: package.json
2.intermediate/4.remote-call/exercise/: README.md
2.intermediate/4.remote-call/solution/: Cargo.toml  README.md
2.intermediate/5.capability-tokens/exercise/: README.md
2.intermediate/5.capability-tokens/solution/: README.md
2.intermediate/solutions/3.capability-tokens/: run_tests.sh
basic/0.entries/: Cargo.toml  README.md  config.nix  default.nix  run_tests
basic/0.entries/workdir/: exercise.dna
basic/1.elements/: Cargo.toml
basic/1.elements/src/: lib.rs  tests.rs
basic/1.hashes/: Cargo.toml  README.md  config.nix  default.nix  run_tests
basic/1.hashes/tests/: package-lock.json
basic/1.hashes/tests/src/: index.ts
basic/1.hashes/workdir/: dna.json  exercise.dna
basic/1.hashes/zomes/exercise/: Cargo.toml
basic/1.hashes/zomes/exercise/src/: lib.rs
basic/2.headers/: Cargo.toml  README.md
basic/2.links/: README.md
basic/3.elements/: default.nix
basic/3.headers/: README.md
basic/4.links/: README.md
basic/4.links/tests/: package-lock.json
basic/4.links/workdir/: dna.yaml
basic/5.source-chain/: README.md
basic/elements/src/: lib.rs
elements/: Cargo.toml
elements/src/: lib.rs
nix/: sources.json
(+88 files in other folders)
