[workspace]
members = [
  "zomes/exercise",
]

[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[patch.crates-io]
hc_utils = {git = "https://github.com/guillemcordoba/hc-utils", branch = "develop", package = "hc_utils"}
hdk = {git = "https://github.com/holochain/holochain.git", rev = "5f1d6f4", package = "hdk"}
holo_hash = {git = "https://github.com/holochain/holochain.git", rev = "5f1d6f4",  package = "holo_hash"}
