[package]
authors = ["Guillem Cordoba <guillem.cordoba@gmail.com>"]
edition = "2018"
name = "elements_exercise"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fixt = {git = "https://github.com/holochain/holochain", rev = "8c62cb5888f491f08e6fdf13b6f3991f85a9801a", package = "fixt"}
hdk3 = {git = "https://github.com/holochain/holochain", rev = "8c62cb5888f491f08e6fdf13b6f3991f85a9801a", package = "hdk3"}
holochain_types = {git = "https://github.com/holochain/holochain", rev = "8c62cb5888f491f08e6fdf13b6f3991f85a9801a", package = "holochain_types"}
holochain_zome_types = {git = "https://github.com/holochain/holochain", rev = "8c62cb5888f491f08e6fdf13b6f3991f85a9801a", package = "holochain_zome_types"}
