[package]
authors = ["guillem.cordoba@gmail.com", "tim@pragmaticmind.com"]
edition = "2018"
name = "zome_functions"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "zome_functions"

[dependencies]
derive_more = "0"
serde = "1"
hdk = { version = "0.0.129", features = ["encoding"] }
chrono = "0.4.19"