[package]
authors = ["guillem.cordoba@gmail.com", "tim@pragmaticmind.com"]
edition = "2018"
name = "entries"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "entries"

[dependencies]
derive_more = "0"
serde = "1"
hdk = { version = "0.0.129", features = ["encoding"] }
chrono = "0.4.19"