[package]
authors = ["_Pyramid", "pyramid-songs@protonmail.com"]
edition = "2018"
name = "links-exercise"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "exercise"

[dependencies]
derive_more = "0"
serde = "1"

hdk = { version = "0.0.129", features = ["encoding"] }
chrono = "0.4.19"