[package]
authors = ["guillem.cordoba@gmail.com", "tim@pragmaticmind.com"]
edition = "2018"
name = "source_chain"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "source_chain"

[dependencies]
derive_more = "0"
serde = "1"

hdk = { version = "0.0.129", features = ["encoding"] }
chrono = "0.4.19"