[package]
authors = ["guillem.cordoba@gmail.com", "tim@pragmaticmind.com"]
edition = "2018"
name = "exercise"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "exercise"

[dependencies]
chrono = "0.4.19"
derive_more = "0"
serde = "1"

hdk = "0.0.108"
holo_hash = {version = "0.0.7", features = ["encoding"]}
