[package]
authors = ["guillem.cordoba@gmail.com", "carl.gieringer@gmail.com"]
edition = "2018"
name = "validation"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "validation_solution"

[dependencies]
derive_more = "0"
serde = "1"

hdk = { version = "0.0.129", features = ["encoding"] }
chrono = "0.4.19"
